# grpc-mcp-gateway

./: .gitignore  Justfile  LICENSE  README.md  go.mod  go.sum  go.work  go.work.sum
.github/workflows/: ci.yaml  ci.yml  release.yml
cmd/protoc-gen-mcp/: main.go
examples/: README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
examples/cpp/: Makefile  README.md
examples/cpp/src/: grpc_server.cc  grpc_server.h  todo_store.h
examples/go/: README.md  impl.go  main.go  smoke_test.go
examples/go/counter/: impl.go  main.go  register_test.go  smoke_test.go
examples/go/grpc-gateway/: main.go
examples/go/http/: impl.go  main.go  smoke_test.go
examples/go/sse/: impl.go  main.go
examples/go/stdio/: main.go
examples/python/: README.md  grpc_servicer.py  main.py  pyproject.toml  server.py  smoke_test.py
examples/python/http/: main.py
examples/python/internal/: impl.py
examples/python/sse/: main.py
examples/python/stdio/: main.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: impl.rs  lib.rs  main.rs  proto.rs
internal/: internal.go
internal/mcp/protobuf/: annotations.pb.go  app.pb.go  elicitation.pb.go  field_type.pb.go  mime_type.pb.go  prompt.pb.go  resource.pb.go  service_options.pb.go
mcp/: README.md
mcp/protobuf/: README.md  annotations.pb.go  app.pb.go  doc.go  elicitation.pb.go  field_type.pb.go  mime_type.pb.go  prompt.pb.go  resource.pb.go  service_options.pb.go
mcp/protobuf/mcppb/: annotations.pb.go  app.pb.go  doc.go  elicitation.pb.go  enum.pb.go  field.pb.go  field_type.pb.go  mime_type.pb.go  progress.pb.go  prompt.pb.go  resource.pb.go  service_options.pb.go  ui.pb.go
mcp/protobuf/python/: README.md  pyproject.toml
mcp/protobuf/python/google/api/: resource_pb2.py
mcp/protobuf/python/mcp/protobuf/: annotations_pb2.py  app_pb2.py  elicitation_pb2.py  enum_pb2.py  field_pb2.py  field_type_pb2.py  mime_type_pb2.py  progress_pb2.py  prompt_pb2.py  resource_pb2.py  service_options_pb2.py  ui_pb2.py
mcp/protobuf/rust/: Cargo.toml  README.md
mcp/protobuf/rust/src/: lib.rs
mcp/protobuf/typescript/: README.md  biome.json  index.ts  package.json  tsconfig.json
pkg/generator/: generator.go  python.go  rust.go  schema.go  template.go
pkg/generator/templates/: go.tpl  python.tpl  rust.tpl
pkg/runtime/: config.go  error.go  server.go
plugin/: go.mod  go.sum
plugin/cmd/protoc-gen-mcp/: main.go
plugin/generator/: cpp.go  factory.go  generator.go  helpers.go  options_extract.go  options_google.go  options_schema.go  options_types.go  progress_stream.go  python.go  rust.go  schema.go  schema_wkt.go  template.go  tool_name.go
plugin/generator/templates/: embed.go  go.tpl  python.tpl  rust.tpl
proto/: README.md  buf.gen.yaml  buf.yaml
proto/mcp/protobuf/: annotations.proto  app.proto  elicitation.proto  enum.proto  field.proto  field_type.proto  mime_type.proto  progress.proto  prompt.proto  resource.proto  service_options.proto  ui.proto
runtime/: README.md  config.go  doc.go  error.go  health.go  metadata.go  metadata_test.go  primitives.go  schema.go  server.go  server_endpoint.go  stream.go
(+22 files in other folders)
