[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "googleapis-common-protos>=1.74.0",
    "grpc-mcp-gateway-protos",
    "grpcio>=1.78.0",
    "grpcio-reflection>=1.80.0",
    "mcp>=1.27.0",
    "protobuf>=7.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# Override: googleapis-common-protos declares protobuf<7; we need 7.x for buf-generated code.
[tool.uv]
override-dependencies = ["protobuf>=7.34.1"]

[tool.uv.sources]
# Use local mcp.protobuf package (required for examples in this repo; CI and local dev)
grpc-mcp-gateway-protos = { path = "../../mcp/protobuf/python" }
