[package]
name = "todo-mcp-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
async-trait = "0.1"
prost = "0.14"
prost-types = "0.14"
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
