[package]
name = "mcp-protobuf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pre-compiled Protocol Buffer types for grpc-mcp-gateway (mcp.protobuf)"
license = "Apache-2.0"
repository = "https://github.com/machanirobotics/grpc-mcp-gateway"
keywords = ["grpc", "mcp", "protobuf", "model-context-protocol"]
categories = ["encoding", "api-bindings"]
include = ["src/", "Cargo.toml"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
